seedboxk8s/applications/shhh/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shhh
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shhh
  template:
    metadata:
      labels:
        app: shhh
    spec:
      containers:
        - image: registry.${clusterFqdn}/tortuga/shhh:latest
          name: shhh
          securityContext:
            runAsUser: ${plexUid}
            runAsGroup: ${plexGid}
          ports:
            - containerPort: 6969
          volumeMounts:
            - mountPath: /config
              name: shhh-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: shhh-config-pvc
          persistentVolumeClaim:
            claimName: shhh-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
