seedboxk8s/applications/shhh/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shhh
  namespace: tortuga
spec:
  replicas: 1
  serviceName: shhh
  selector:
    matchLabels:
      app.kubernetes.io/name: shhh
  template:
    metadata:
      labels:
        app.kubernetes.io/name: shhh
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        - image: ${shhhImage}:v3.1.0.2116
          name: shhh
          ports:
            - containerPort: 6969
          volumeMounts:
            - mountPath: /config
              name: shhh-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      imagePullSecrets:
        - name: registry-k8s-dockerconfigjson
      volumes:
        - name: import
          emptyDir: {}
        - name: shhh-config-pvc
          persistentVolumeClaim:
            claimName: shhh-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
