seedboxk8s/applications/shhh/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shhh
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: shhh
  ports:
  - protocol: TCP
    port: 80
    targetPort: 6969
