seedboxk8s/applications/shhh/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: shhh
  namespace: tortuga
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Shhh
    gethomepage.dev/group: Ao
    gethomepage.dev/icon: whisparr
    gethomepage.dev/href: https://shhh.${productionClusterFqdn}

spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`shhh.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: shhh
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
